--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="main">
-        <div id="circle"></div>
+        <div class="circle"></div>
         <div id="home">
             <div class="navbar">
                 <div class="nav-components" id="brand">
@@ -28,18 +28,24 @@
 
             <div id="head-text">
                 <div class="bounding">
-                    <h1 id="top-head-text">PRODUCT</h1>
+                    <h1 class="boundingelem" id="top-head-text">PRODUCT</h1>
 
                 </div>
                 <div id="blocktext">
-                    <h1 id="mid-head-text">DESIGNER</h1>
-                    <h4 id="bottom-head-text">Based on torronto</h4>
+                    <div class="bounding">
+                        <h1 class="boundingelem" id="mid-head-text">DESIGNER</h1>
+                        <h4 class="boundingelem" id="bottom-head-text">Based on torronto</h4>
+
+                    </div>
                 </div>
             </div>
 
             <div id="small-head">
-                <h5>available for freelance</h5>
-                <h5>work from may 23"</h5>
+                <div class="bounding">
+                    <h5 class="boundingelem">available for freelance</h5>
+                    <h5 class="boundingelem">work from may 23"</h5>
+
+                </div>
             </div>
 
             <div id="home-footer">
@@ -55,6 +61,7 @@
         </div>
 
         <div id="page-2">
+            <div class="circle"></div>
             <div class="element" id="elem-1">
                 <img src="/images/plug.png" alt="image-plug">
                 <h1>THE PLUG</h1>
@@ -90,7 +97,7 @@
 
 
                     </p>
-                    <button><a href="">let's Talk</a></button>
+                    <a href="">let's Talk</a>
 
                 </div>
             </div>
