fixed some not working parts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.css">
 </head>
 
 <body>
@@ -61,18 +62,15 @@
         </div>
 
         <div id="page-2">
-            <div class="element" id="elem-1">
-                <img src="/images/plug.png" alt="image-plug">
+            <div class="element" data-cursor-text="heloow" id="elem-1">
                 <h1>THE PLUG</h1>
                 <h5>2022</h5>
             </div>
             <div class="element" id="elem-2">
-                <img src="/images/ixperience.png" alt="img">
                 <h1>IXPERIENCE</h1>
                 <h5>2023</h5>
             </div>
             <div class="element" id="elem-3">
-                <img src="/images/hudu.png" alt="">
                 <h1>HUDU</h1>
                 <h5>2023</h5>
             </div>
@@ -128,6 +126,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/mouse-follower@1/dist/mouse-follower.min.js"></script>
     <script src="script.js"></script>
 </body>
 
